hphp/hack/test/typecheck/abstract_implement2.php.exp
File "abstract_implement2.php", line 21, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "abstract_implement2.php", line 20, characters 29-32:
Expected bool
File "abstract_implement2.php", line 18, characters 43-43:
  via this generic T
File "abstract_implement2.php", line 15, characters 26-26:
  via this generic T
File "abstract_implement2.php", line 21, characters 26-28:
But got int
